fixes for stretch goal to resize nav bar on desktop

--- a/submissions/shane-derek-tre/styles/modules.css
+++ b/submissions/shane-derek-tre/styles/modules.css
@@ -63,3 +63,29 @@
          - The main-nav should be all on one row, with padding spaced better
            for a larger screen.
 */
+
+@media only screen and (min-width: 765px) {
+  .icon-menu {
+    display: none;
+  }
+  .main-nav ul {
+    display: inline;
+
+  }
+  nav {
+    float: right;
+    display: inline;
+    clear: none;
+  }
+  header {
+
+  }
+  .main-nav li {
+    display: inline;
+    border: none;
+    font-size: 2vw;
+  }
+  .main-nav:hover ul {
+    display: inline;
+  }
+}
